--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ form .input-container input, input[type=submit] {
 
 form input[type="submit"] {
     border: 0;
-    background: red;
+    background: blue;
     color: white;
     font-weight: bold;
     margin-bottom: 20px;
